examples/test/testpolicy15068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15068
  namespace: namespace166
spec:
  podSelector:
    matchLabels:
      key9: value38
      key12: value24
      key42: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value49
          key1: value44
      podSelector:
        matchLabels:
          key38: value13
